--- a/rpz/50-conclusion.tex
+++ b/rpz/50-conclusion.tex
@@ -8,10 +8,10 @@
 
 \begin{itemize}
 	\item проанализированы существующие алгоритмы моделирования волн и выбраны подходящие для выполнения проекта
-	\item проанализированы существующие алгоритмы освещения, позволяющие реализовать правдоподобную закраску с тенями, и выбраны подходящие для выполнения проекта
+	\item проанализированы существующие алгоритмы освещения, позволяющие реализовать закраску с тенями, и выбраны подходящие для выполнения проекта
 	\item реализован интерфейс программы
 \end{itemize}
 
-В процессе исследовательской работы было выяснено, что повышение детализации волн повышает вычислительную сложность и время отрисовки одного кадра.
+В процессе исследовательской работы было выяснено, что повышение детализации волн, а также размера плоскости симуляции повышает вычислительную сложность и время отрисовки одного кадра.
 
 \addcontentsline{toc}{chapter}{Заключение}
