--- a/rpz/511-biblio.bib
+++ b/rpz/511-biblio.bib
@@ -1,3 +1,8 @@
+@misc{tf,
+	title="Jerry Tessendorf. Simulating Ocean Water.",
+	howpublished="Режим доступа: \url{https://www.researchgate.net/publication/264839743_Simulating_Ocean_Water} (дата обращения: 13.08.2020)"
+}
+
 @misc{gems1,
 	title="GPU Gems. Chapter 1. Effective Water Simulation from Physical Models [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://developer.download.nvidia.com/books/HTML/gpugems/gpugems_ch01.html} (дата обращения: 13.08.2020)"
