--- a/rpz/design.tex
+++ b/rpz/design.tex
@@ -29,18 +29,18 @@
 
 \begin{equation*} 
 \omega = \frac{2}{L}
-\eqno(6)
+\eqno(8)
 \end{equation*}
 
 \begin{equation*} 
 \varphi = \frac{2V}{L}
-\eqno(7)
+\eqno(9)
 \end{equation*}
 
-Подставим формулы (6) и (7) в (4):
+Подставим формулы (8) и (9) в (4):
 \begin{equation*} 
 H(x, y, t) = \sum(A_{i} \times sin(D_{i} \cdot (x, y) \times \frac{2}{L_{i}} + t \times \frac{2V_{i}}{L_{i}}))
-\eqno(8)
+\eqno(10)
 \end{equation*}
 
 Остальные переменные, кроме времени и координат вершины, можно задавать, как произвольные константы.
@@ -50,9 +50,9 @@ H(x, y, t) = \sum(A_{i} \times sin(D_{i} \cdot (x, y) \times \frac{2}{L_{i}} + t
 
 Как уже отмечалось ранее, волны Герстнера определяют смещения по компонентам $x, y, z$. Это помогает достичь реалистичного результата моделирования.
 
-Рассмотрим волновую функцию Герстнера (5). Можно заметить, что компоненты получаемого вектора отвечают за смещения по каждой из координат. Так же компонента $z$ (высота гребня волны) данного вектора уже известна - это формула (8).
+Рассмотрим волновую функцию Герстнера (5). Можно заметить, что компоненты получаемого вектора отвечают за смещения по каждой из координат. Так же компонента $z$ (высота гребня волны) данного вектора уже известна - это формула (10).
 
-Подставим (8) в (5):
+Подставим (10) в (5):
 
 \begin{equation*} 
 	P(x, y, t) = 
@@ -61,7 +61,7 @@ H(x, y, t) = \sum(A_{i} \times sin(D_{i} \cdot (x, y) \times \frac{2}{L_{i}} + t
 		y + \sum(Q_{i}A_{i} \times D_{i}y \times cos(\omega_{i}D_{i} \cdot (x, y) + \varphi_{i}t)),\\
 		\sum(A_{i} \times sin(D_{i} \cdot (x, y) \times \frac{2}{L_{i}} + t \times \frac{2V_{i}}{L_{i}}))
 	\end{pmatrix}
-	\eqno(9)
+	\eqno(11)
 \end{equation*}
 
 Получена конечная волновая функция Герстнера.
@@ -77,7 +77,7 @@ H(x, y, t) = \sum(A_{i} \times sin(D_{i} \cdot (x, y) \times \frac{2}{L_{i}} + t
 \newpage
 \section{Наложение волн.}
 
-При моделировании большого водного пространства(океан или море) нам необходимы большие, острые пики. Для достижения большей реалистичности можно также использовать наложение волн. Чаще всего совмещают 4-12 волн (9-12 на океан или море, 4-8 на озеро). Т.к. нам необходима симуляция большой водной поверхности, следовательно необходимо выбирать 9-12 совмещений волн.
+При моделировании большого водного пространства(океан или море) нам необходимы большие, острые пики. Для достижения реалистичности можно также использовать наложение волн. Чаще всего совмещают 4-12 волн (9-12 на океан или море, 4-8 на озеро). Т.к. нам необходима симуляция водной поверхности, следовательно необходимо выбирать 9-12 совмещений волн.
 
 \begin{figure}[h]
 	\center{\includegraphics[scale=0.6]{pictures/nalog_voln.jpg}}
