--- a/rpz/research.tex
+++ b/rpz/research.tex
@@ -112,6 +112,34 @@
 	\end{center}
 \end{table}
 
+\begin{figure}[h]
+	\centering
+	\begin{tikzpicture}
+		\begin{axis}[
+			axis lines=left,
+			xlabel=Размер сетки(пиксели) ,
+			ylabel={Тики},
+			legend pos=north west,
+			ymajorgrids=true
+			]
+			\addplot table {
+				10000 42782
+				40000 43284
+				90000 45594
+				160000 47417
+				250000 48903
+				360000 50219
+				490000 53101
+				640000 56732
+			};
+		\end{axis}
+	\end{tikzpicture}
+	\captionsetup{justification=centering}
+	\caption{Зависимость времени работы алгоритма от размера исходной сетки.}
+	\label{plt:time_img}
+	
+\end{figure}
+
 \subsection{Cравнение времени, при разном количестве полигонов}
 
 Сравнить время рендеринга при разом количестве полигонов  можно, если не изменять размер базовой сетки, а также количество накладываемых волн. Взятый размер стеки равен 400х400, количество накладываемых волн 3.
@@ -162,8 +190,46 @@
 	\end{center}
 \end{table}
 
-\newpage
 
+
+\begin{figure}[h]
+	\centering
+	\begin{tikzpicture}
+		\begin{axis}[
+			axis lines=left,
+			xlabel=Количество полигонов ,
+			ylabel={Тики},
+			legend pos=north west,
+			ymajorgrids=true
+			]
+			\addplot table {
+				100 14775
+				400 15180
+				900 17946
+				1200 20605
+				1600 21182
+				2500 23760
+				3600 25367
+				4900 28089
+				6400 34606
+				8100 39220
+				10000 47151
+				12100 55233
+				14400 65147
+				16000 74444
+				19600 86878
+				22500 95676
+			};
+		\end{axis}
+	\end{tikzpicture}
+	\captionsetup{justification=centering}
+	\caption{Зависимость времени работы алгоритма от количества полигонов.}
+	\label{plt:time_img}
+	
+\end{figure}
+
+
+\newpage
 \subsection{Cравнение времени, при разном количестве накладываемых волн}
 
 
@@ -171,6 +237,7 @@
 
 Результаты сравнения времени рендеринга кадра для изображения водной поверхности при разном количестве накладываемых волн приведены в таблице \ref{tab:wave}.
 
+\newpage
 \begin{table}[h!]
 	\caption{}
 	\label{tab:wave}
@@ -209,6 +276,41 @@
 	\end{center}
 \end{table}
 
+
+\begin{figure}[h]
+	\centering
+	\begin{tikzpicture}
+		\begin{axis}[
+			axis lines=left,
+			xlabel=Количество полигонов ,
+			ylabel={Тики},
+			legend pos=north west,
+			ymajorgrids=true
+			]
+			\addplot table {
+				0 39753
+				1 41244
+				2  41453
+				3 44749
+				4 47229 
+				5 47883
+				6 50893
+				7 52283
+				8 55608
+				9 57292
+				10 60908
+				11 61400
+				12 65104
+			};
+		\end{axis}
+	\end{tikzpicture}
+	\captionsetup{justification=centering}
+	\caption{Зависимость времени работы алгоритма от количества накладываемых волн.}
+	\label{plt:time_img2}
+\end{figure}
+
+
+
 \newpage
 \section*{Вывод}
 
@@ -216,11 +318,11 @@
 
 \begin{itemize}
 	\item время рендеринга увеличивается с увелечением размера базовой секи
-	\item время рендеринга увеличиваетсяс увелечение  количества полигонов
-	\item время рендеринга увеличивается  с увелечением количества накладываемых волн
+	\item время рендеринга увеличивается с увелечение  количества полигонов
+	\item время рендеринга увеличивается с увелечением количества накладываемых волн
 \end{itemize}
 
-Как и ожидалось, с увелечением размера поверхности, количства полигонов и с усложнением волн(их накладывании) увеличивается время отрисовки.
+Итак, с увелечением размера поверхности, количства полигонов и с усложнением волн(их накладывании) увеличивается время отрисовки.
 
 
 
