--- a/rpz/technology.tex
+++ b/rpz/technology.tex
@@ -4,54 +4,22 @@
 
 \section{Выбор технических средств}
 
-В качестве языка программирования, на котором будет реализовано программное обеспечение, выбран язык программирования C++ \cite{cpp}. Выбор языка обусловлен тем, что в нём есть поддержка объектно-ориентированной парадигмы, а также для этого языка существует фреймворк Qt \cite{qt}, предоставляющая полный функционал, который нужен для создания пользовательского интерфейса программного обеспечения. 
+В качестве языка программирования, на котором будет реализовано программное обеспечение, выбран язык программирования C++ \cite{cpp}. Выбор языка обусловлен тем, что в нём есть поддержка объектно-ориентированной парадигмы, а также у для этого языка существует библиотека Qt \cite{qt}, наиболее полный функционал которой предостален именно для этого языка. 
 
-В качестве среды разработки выбран QtCreator \cite{qtc}, позволяющий легко работать с фраймворком  Qt и содержащий большим количеством инструментов для различных языка программирования С++.
+Библиотека Qt была выбрана, потому что она имеет большое количество встроенных классов и большой функционал в работе с изображениями.
+
+В качестве среды разработки выбран QtCreator \cite{qtc}, позволяющий легко работать с библиотекой  Qt и содержащий большое количество инструментов для языка программирования С++.
 
 \section{Листинг кода}
-
-В листингах 3.1 – 3.8 приведен исходный код реализации алгоритма симуляции водной поверхности.
-
 Алгоритм разделён на модули: генерация волн Герстнера, обработчик волн, обработчик перемещения и поворотов, z-buffer с обработчиком освещения.
 
-
-\begin{lstinputlisting}[
-	caption={Заголовочный файл модуля обработчик волн.},
-	label={lst:mhc},
-	style={cpp},
-	]{../handler_waves.h}
-\end{lstinputlisting}
-
+В листингах 3.1 – 3.3 приведен исходный код основных функций алгоритма симуляции водной поверхности.
 
 \begin{lstinputlisting}[
 	caption={Файл реализации модуля обработчик волн.},
 	label={lst:mhc},
 	style={cpp},
-	]{../handler_waves.cpp}
-\end{lstinputlisting}
-
-
-\begin{lstinputlisting}[
-	caption={Заголовочный файл обработчика перемещения и поворотов.},
-	label={lst:mhc},
-	style={cpp},
-	]{../handler_transform.h}
-\end{lstinputlisting}
-
-
-\begin{lstinputlisting}[
-	caption={Файл реализации обработчика перемещения и поворотов.},
-	label={lst:mhc},
-	style={cpp},
-	]{../handler_transform.cpp}
-\end{lstinputlisting}
-
-
-\begin{lstinputlisting}[
-	caption={Заголовочный файл генерации волн.},
-	label={lst:mhc},
-	style={cpp},
-	]{../waves.h}
+	]{../source/handler_waves.cpp}
 \end{lstinputlisting}
 
 
@@ -59,15 +27,7 @@
 	caption={Файл реализации генерации волн.},
 	label={lst:mhc},
 	style={cpp},
-	]{../waves.cpp}
-\end{lstinputlisting}
-
-
-\begin{lstinputlisting}[
-	caption={Заголовочный файл z-buffer с обработчиком освещения.},
-	label={lst:mhc},
-	style={cpp},
-	]{../z_buffer.h}
+	]{../source/waves.cpp}
 \end{lstinputlisting}
 
 
@@ -75,7 +35,7 @@
 	caption={Файл реализации z-buffer с обработчиком освещения.},
 	label={lst:mhc},
 	style={cpp},
-	]{../z_buffer.cpp}
+	]{../source/z_buffer.cpp}
 \end{lstinputlisting}
 
 
